# drasi-nodejs

./: .gitignore  .npmrc.publish-internal.example  .npmrc.publish-public.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json  types.d.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  metrics.yml  release.yml  website.yml
docs/: api-reference.md  metrics.md  releasing.md
examples/: js-reaction.mjs  js-source.mjs  quickstart.mjs
examples/electron-explorer/: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json
examples/electron-explorer/src/main/: engine-host.ts  index.ts  ipc.ts  persistence.ts  registry-service.ts
examples/electron-explorer/src/preload/: index.d.ts  index.ts
examples/electron-explorer/src/renderer/: index.html
examples/electron-explorer/src/renderer/src/: App.tsx  api.ts  styles.css
examples/electron-explorer/src/renderer/src/components/: ui.tsx
examples/electron-explorer/src/renderer/src/views/: ObservabilityView.tsx  PluginsView.tsx  QueriesView.tsx  ReactionsView.tsx  SourcesView.tsx
examples/electron-explorer/src/shared/: ipc.ts  types.ts
examples/trading/: README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
examples/trading/data/: initial-prices.json
examples/trading/database/: docker-compose.yml  init.sql
examples/trading/src/main/: engine-host.ts  index.ts  plugins.ts  price-feed.ts
examples/trading/src/preload/: index.d.ts  index.ts
examples/trading/src/renderer/: index.html
examples/trading/src/renderer/src/: App.tsx  api.ts  styles.css
examples/trading/src/renderer/src/panels/: QueryPanel.tsx
examples/trading/src/shared/: queries.ts  types.ts
scripts/: build-plugins.mjs  publish-internal.mjs
src/: components.rs  conversions.rs  drasi.rs  engine.rs  error.rs  lib.rs  retry.rs  secrets.rs  types.rs  verification.rs
test/: engine.test.mjs  errors.test.mjs  features.test.mjs  leaks.test.mjs  types.test-d.ts
website/: .gitignore  README.md  config.toml  package-lock.json  package.json
website/assets/scss/: _styles_project.scss
website/content/: _index.html  _index.md
website/content/docs/: _index.md
website/content/docs/api/: _index.md
website/content/docs/concepts/: _index.md
website/content/docs/examples/: _index.md  trading.md
website/content/docs/getting-started/: _index.md
website/content/docs/guides/: _index.md  error-handling.md  js-reactions.md  js-sources.md  plugins.md  typescript-types.md
website/layouts/_partials/hooks/: head-end.html
