[package]
name = "drasi"
version = "0.1.0"
edition = "2021"
authors = ["Drasi Project"]
description = "Embed the Drasi continuous-query engine in Node.js, with dynamic plugin loading and JavaScript-defined sources and reactions"
license = "Apache-2.0"
repository = "https://github.com/drasi-project/drasi-nodejs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi9", "tokio_rt", "serde-json"] }
napi-derive = "3"

# Drasi engine + dynamic plugin host SDK.
# Path deps to the local drasi-core workspace (0.8.5 set) so the host and any
# plugins built from the same source share an identical plugin SDK / FFI ABI.
# NOTE: the currently published crates are version-skewed (host-sdk 0.8.4 vs
# lib/plugin-sdk 0.8.5); switch these to fixed published versions once a
# consistent set is released. See README "Dependency strategy".
drasi-lib = { path = "../drasi-core/lib" }
drasi-core = { path = "../drasi-core/core" }
drasi-host-sdk = { path = "../drasi-core/components/host-sdk", features = ["watcher", "registry"] }
drasi-plugin-sdk = { path = "../drasi-core/components/plugin-sdk" }
drasi-state-store-redb = { path = "../drasi-core/components/state_stores/redb" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
log = "0.4"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-stream = "0.1"
chrono = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
