[package]
name = "drasi"
version = "0.1.0"
edition = "2021"
authors = ["Drasi Project"]
description = "Embed the Drasi continuous-query engine in Node.js, with dynamic plugin loading and JavaScript-defined sources and reactions"
license = "Apache-2.0"
repository = "https://github.com/drasi-project/drasi-nodejs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi9", "tokio_rt", "serde-json"] }
napi-derive = "3"

# Drasi engine + dynamic plugin host SDK, from crates.io.
# The Drasi workspace versions its crates on independent lines (only host-sdk and
# plugin-sdk track the shared workspace version), so the numbers below differ by
# design; their published dependency requirements still unify to a single graph
# (host-sdk 0.10 -> plugin-sdk 0.10 + drasi-lib ^0.8.8; drasi-lib 0.8 -> drasi-core
# ^0.5.7). Exact versions are pinned in Cargo.lock. The example plugins used by the
# test suite are likewise built from published crates (see scripts/build-plugins.mjs),
# so the host and plugins share a matching plugin-SDK / FFI ABI (0.10) without a
# local drasi-core checkout.
drasi-lib = "0.8.9"
drasi-core = "0.5.7"
drasi-host-sdk = { version = "0.10.0", features = ["watcher", "registry"] }
drasi-plugin-sdk = "0.10.0"
drasi-state-store-redb = "0.2.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
log = "0.4"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-stream = "0.1"
chrono = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
